--- a/src/sass/_measures.scss
+++ b/src/sass/_measures.scss
@@ -1,5 +1,5 @@
 $blackberry: 320px;
 $smartphone: 480px;
 $tablet: 768px;
-$desktop: 1024px;
-$smart: 1200px;
+$notebook: 1024px;
+$desktop: 1200px;
