--- a/src/sass/_gamecards.scss
+++ b/src/sass/_gamecards.scss
@@ -250,7 +250,7 @@
         }
     }
 
-    @media (min-width: $tablet) and (max-width: $desktop) {
+    @media (min-width: $tablet) and (max-width: $notebook) {
         @include paddingMargin(5% 5%, 0);
 
         section {
@@ -274,7 +274,7 @@
         }
     }
     
-    @media (min-width: $desktop) and (max-width: $smart) {
+    @media (min-width: $notebook) and (max-width: $desktop) {
         @include paddingMargin(4% 4%, 0);
 
         section {
@@ -298,7 +298,7 @@
         }
     }
 
-    @media (min-width: $smart) {
+    @media (min-width: $desktop) {
         @include paddingMargin(3% 3%, 0);
 
         section {
